--- a/src/EngineeringToolbox.Infrastructure/EngineeringToolbox.Infrastructure.csproj
+++ b/src/EngineeringToolbox.Infrastructure/EngineeringToolbox.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+   
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.12" />
@@ -22,6 +23,10 @@
   <ItemGroup>
     <ProjectReference Include="..\EngineeringToolbox.Shared\EngineeringToolbox.Shared.csproj" />
     <ProjectReference Include="..\EngineeringToolbox.Domain\EngineeringToolbox.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mapping\" />
   </ItemGroup>
 
 </Project>
